src/index.css
:root {
  font-family: Circular Std Bold;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: #000;
  background-color: #fff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

@font-face {
  font-family: "Circular Std";
  src: local("Circular Std"), url(./fonts/CircularStd-Medium.otf) format("opentype");
}

@font-face {
  font-family: "Circular Std Bold";
  src: local("Circular Std Bold"), url(./fonts/CircularStd-Bold.otf) format("opentype");
}

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  min-height: 100vh;
}

#root {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.displayClass {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: center;
  min-width: 50%;
}

.column {
  width: clamp(300px, 50%, 500px);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.column ul {
  width: 100%;
}

#lyrics {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  max-height: 50vh;
  max-width: 25em;
  
  margin: 15px 15px;
  border-radius: 5px;
  padding: 25px;
  background-color: #5779fb;
  color: black;
  line-height: 0.1;
}

#lyrics h2 {
  font-size: 1rem;
  font-weight: 600;
  margin: 0;
  padding: 0px 0px 5px 0px;
  line-height: 1;
}

#lyrics h3 {
  font-size: 1rem;
  font-weight: 600;
  margin: 0;
  padding: 0px 0px 10px 0px;
  line-height: 1;
}

#lyrics p {
  font-size: 1.5rem;
  line-height: 1.6rem;
  margin: 0px 0px 20px 0px;
}

#lyrics img {
  max-width: 50px;
  max-height: 50px;
  border-radius: 10px
}

.lyricsCard {
  display: flex;
  flex-direction: row;
  padding: 0px 0px 25px 0px;
}

.lyricsNames {
  display: flex; 
  flex-direction: column;
  padding: 0px 0px 0px 20px;
  margin: 5px 0px 0px 0px;
}

.lyricsScrollable {
  overflow-y: scroll;
}

